--- a/css/styles.css
+++ b/css/styles.css
@@ -354,8 +354,7 @@ img {
   background: var(--background-light-color);
 }
 .member-info {
-  padding-top: 30px;
-  padding-bottom: 16px;
+  padding: 30px 0;
 }
 .member-name {
   font-weight: 500;
@@ -369,6 +368,7 @@ img {
   font-size: 16px;
   line-height: 1.171;
   letter-spacing: 0.03em;
+  margin-bottom: 16px;
 }
 
 .team-list {
@@ -383,7 +383,6 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  padding-bottom: 30px;
 }
 /* Regular customers */
 .regular-customer-icon {
@@ -640,9 +639,11 @@ img {
   border-radius: 50%;
   cursor: pointer;
 }
-.modal-close:hover {
+.modal-close:hover, .modal-close:focus {
   color: var(--accent-color);
+
 }
+
 .close-modal-icon {
   width: 11px;
   height: 11px;
@@ -731,7 +732,7 @@ img {
   line-height: 1.714;
   letter-spacing: 0.03em;
   color: var(--text-color);
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   cursor: pointer;
   display: flex;
   justify-content: center;
