--- a/css/styles.css
+++ b/css/styles.css
@@ -186,8 +186,8 @@ img {
   letter-spacing: 0.02em;
   cursor: pointer;
 }
-.nav-list__item {
-}
+/* .nav-list__item {
+} */
 .nav-list__item--active {
   position: relative;
 }
@@ -665,10 +665,10 @@ img {
   opacity: 0;
   pointer-events: none;
 }
-.backdrop.is-hidden .modal-content {
+.backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0);
 }
-.modal-content {
+.modal {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -701,7 +701,7 @@ img {
   color: var(--accent-color);
 }
 
-.close-modal-icon {
+.modal-close__icon {
   width: 11px;
   height: 11px;
   fill: currentColor;
@@ -713,11 +713,11 @@ img {
   justify-content: center;
 }
 
-.modal-form .sign-button {
+.modal-form__sign-button {
   align-self: center;
 }
 
-.modal-form-input {
+.modal-form__input {
   width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -726,37 +726,37 @@ img {
   outline: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-form-input:focus,
+.modal-form__input:focus,
 .modal-form-text:focus {
   border-color: var(--accent-color);
 }
 
-.modal-form-input:focus + .modal-form-icon {
+.modal-form-input:focus + .modal-form__icon {
   fill: var(--accent-color);
 }
 
-.modal-form-title {
+.modal-form__title {
   text-align: center;
   font-weight: 700;
   font-size: 20px;
   margin-bottom: 12px;
 }
-.modal-form-field {
+.modal-form__field {
   font-size: 12px;
   font-weight: 400;
   color: var(--text-color);
   display: inline-block;
   margin-bottom: 10px;
 }
-.modal-form-area {
+.modal-form__field--area {
   margin-bottom: 20px;
 }
-.modal-form-field-wrap {
+.modal-form__field-wrap {
   position: relative;
   display: block;
   margin-top: 4px;
 }
-.modal-form-icon {
+.modal-form__icon {
   position: absolute;
   top: 50%;
   left: 15px;
@@ -768,7 +768,7 @@ img {
   justify-content: center;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-form-text {
+.modal-form__text {
   width: 100%;
   height: 120px;
   resize: none;
@@ -784,7 +784,7 @@ img {
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-.modal-form-agree-label {
+.modal-form__agree-label {
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
@@ -795,12 +795,12 @@ img {
   justify-content: center;
   align-items: center;
 }
-.modal-form-agree-label a {
+.modal-form__agreements {
   color: var(--accent-color);
   text-decoration: underline;
 }
 
-.modal-form-check-wrap {
+.modal-form__check-wrap {
   width: 16px;
   height: 15px;
   background-image: url("../images/check.svg");
@@ -813,10 +813,10 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-form-check:focus + .modal-form-agree-label .modal-form-check-wrap {
+.modal-form__check:focus + .modal-form__agree-label .modal-form__check-wrap {
   border-color: var(--accent-color);
 }
-.modal-form-check:checked + .modal-form-agree-label .modal-form-check-wrap {
+.modal-form__check:checked + .modal-form__agree-label .modal-form__check-wrap {
   background-color: var(--accent-color);
   border-color: var(--accent-color);
 }
